Fix menu spacing and make Investors page sexy

--- a/css/style.css
+++ b/css/style.css
@@ -3743,14 +3743,14 @@ Main Header
   position: relative;
   float: left;
   padding: 37px 0;
-  margin: 0 16px;
+  margin: 0 10px;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
   text-transform: capitalize;
 }
 @media (max-width: 1439.98px) {
   .main-menu .navigation > li {
-    margin-right: 20px;
+    margin-right: 10px;
   }
 }
 .main-menu .navigation > li:hover:before, .main-menu .navigation > li.current:before {
